--- a/computer-stats-python-app/db-config.ini
+++ b/computer-stats-python-app/db-config.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
-host = localhost
-port = 8889
-user = computer-stats
-password = ouaGS1zjUeu5sW3x
-database = computer-stats
+DB_USERNAME = computer-stats
+DB_PASSWORD = ouaGS1zjUeu5sW3x
+DB_HOST = localhost
+DB_DATABASE = computer-stats
+DB_PORT = 8889
